--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Known as the City of Thousand Temples, Kanchipuram is known for its temple architectures, 1000-pillared halls, huge temple towers and silk saris. Kanchipuram ...
 </h1>
+<h6>buji</h6>
     
 </body>
 </html>
